Fix image align

--- a/css/main.css
+++ b/css/main.css
@@ -12,6 +12,7 @@ html {
   box-sizing: border-box;
   font: normal 100%/1.3 "Noto Sans", sans-serif;
   font-family: 'Noto Sans', sans-serif;
+  margin: 0;
 }
 
 *, *::before, *::after {
@@ -24,6 +25,7 @@ body {
 }
 
 .wrapper {
+  max-width: 45em;
   display: flex;
   flex-wrap: wrap;
   margin: 0;
@@ -32,15 +34,27 @@ body {
 
 img {
   width: 50%;
-  display: block;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  align-items: center;
+  margin: 0;
 }
 
 .section-icon {
   margin: 0;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  align-items: center;
 }
 
 .section-letter {
   margin: 0;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  align-items: center;
 }
 
 .img-flex {
